--- a/borsa/tools/account-faq.html
+++ b/borsa/tools/account-faq.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Web Trader - BorsaPro</title>
+  <title>Account FAQ - BorsaPro</title>
   <link rel="stylesheet" href="../css/style.min.css">
 </head>
 <body>
@@ -30,19 +30,19 @@
                 <li class="main-nav__item">
                   <a class="main-nav__title">Platforms</a>
                   <ul class="main-nav__list">
-                      <li class="main-nav__item"><a href="metatrader.html">BorsaPro Trade Meta Trader 4</a></li>
-                      <li class="main-nav__item"><a>BorsaPro Web Trader</a></li>
-                      <li class="main-nav__item"><a href="mobile.html">BorsaPro Trade Mobile</a></li>
+                      <li class="main-nav__item"><a href="../platforms/metatrader.html">BorsaPro Trade Meta Trader 4</a></li>
+                      <li class="main-nav__item"><a href="../platforms/web-trader.html">BorsaPro Web Trader</a></li>
+                      <li class="main-nav__item"><a href="../platforms/mobile.html">BorsaPro Trade Mobile</a></li>
                   </ul>
                 </li>
                 <li class="main-nav__item">
                   <a class="main-nav__title">Tools</a>
                   <ul class="main-nav__list">
                       <li class="main-nav__item"><a href="templates/spread.html">Spreads and Trading Hours</a></li>
-                      <li class="main-nav__item"><a href="../tools/trade-glossary.html">Trade glossary</a></li>
-                      <li class="main-nav__item"><a href="../tools/forex-signals.html">Forex Signals</a></li>
-                      <li class="main-nav__item"><a href="../tools/account-faq.html">Account FAQ</a></li>
-                      <li class="main-nav__item"><a href="../tools/account-funding.html">Account Funding & Withdrawal</a></li>
+                      <li class="main-nav__item"><a href="trade-glossary.html">Trade glossary</a></li>
+                      <li class="main-nav__item"><a href="forex-signals.com">Forex Signals</a></li>
+                      <li class="main-nav__item"><a>Account FAQ</a></li>
+                      <li class="main-nav__item"><a href="account-funding.html">Account Funding & Withdrawal</a></li>
                   </ul>
                 </li>
             </ul>
@@ -60,41 +60,32 @@
       </div>
     </div>
   </header>
-  <section class="title  title--platforms">
+  <section class="title  title--tools">
     <div class="container">
-      <h1>BorsaPro Web Trader</h1>
+      <h1>Account FAQ</h1>
     </div>
   </section>
-  <section class="web">
+  <section class="faq">
     <div class="container">
-      <b>Begin trading immediately!</b>
-      <a href="https://webtrader.borsapro.com/" target="_blank">Go to Web Trader</a>
-      <p>BorsaPro`s highest purpose is to turn its users into successful traders and increase their success rates as much as possible. For that purpose we give you the BorsaPro Online trader, which enables you to be 100% involved in the trading process and adjust according to the market conditions, all the while letting you plan your trading activities to your preference.</p>
-      <p>Utilize the full scope of the latest technological developments in the field by trading from any internet connectible device. Investing in Forex, Commodities and CFD has never been easier thanks to the BorsaPro Online Trader.</p>
-      <b>It lets you:</b>
-      <ul>
-        <li>Have full control over your profile.</li>
-        <li>Perform in-depth market analysis.</li>
-        <li>Invest in a wide selection of orders.</li>
-      </ul>
-      <p>BorsaPro grants you a gateway to all your trading needs with the online and mobile trading applications. They are extremely intuitive and functional, enabling you to start a trade whenever you want, from anywhere with internet access. In case you already have a trading profile you can start a trade immediately.</p>
-      <p>The BorsaPro Online Trader present users with the option to choose from a number of languages, it features the latest charts, fast operation of the trades, and best of all, it makes everything easy. You have the ability to access to trader from a number of different devices such as Apple or Android phone, tablet or PC. The platform is easy to use on every device and you can handle your investments with just a few clicks.</p>
-      <p>Due to the intuitiveness and easiness of use, the BorsaPro Online trader will make sure that you are fully informed about all trades that interest you. Stay knowledgeable on the latest market news and trends, without having to leave your couch.</p>
-      <b>BorsaPro allows you to:</b>
-      <ul>
-        <li>Invest in a wide selection of instruments.</li>
-        <li>Perform the trades swiftly.</li>
-        <li>Get informed about the latest industry trends.</li>
-        <li>Get the actual market prices at the moment.</li>
-        <li>Make trades regardless of your location.</li>
-        <li>Make the platform look according to your desires.</li>
-        <li>Make the changes you want.</li>
-        <li>Make informed trading decisions based on technical stats.</li>
-        <li>Have access from any internet connectible device.</li>
-      </ul>
-      <p>The trading field can be very volatile and the conditions can change in a matter of minutes. Therefore, you need to be able to react quickly in such cases. With the BorsaPro Online Trader, you act accordingly and access your trades at any moment. The advantage is in your hands.</p>
-      <p>With the hastened pace of modern life, you need to be constantly on the go, but the platform lets you combine that with your trading needs, without having to compromise. It`s accessible from any browser, there is no need for you to be stuck to any specific place. Be it in your office, or from a friend`s PC, logging into your account and trading or just checking something is quick and simple.</p>
-      <p>Using BorsaPro to trade is like a walk in the park.</p>
+      <b>How to open a BorsaPro trade account?</b>
+        <p>It is easy and secure to open a BorsaPro account. Initially, you can choose to open a practice, free demo account. However, if you’re ready to trade, you can make a deposit and open a Live Account. Based on how you would like to fund your account, there are three types of account available, but once you begin trading, there is the option to move from one account type to another.</p>
+        <p>You will need to fill out a short registration form for any Live Account that you want to open. Legal documentation is required by regulation in order to provide proof of your identity. As soon as your identity has been confirmed, all you need to do is download the platform you want to trade on, make a deposit to fund your account, and then you’re ready to start trading.</p>
+      <b>Which types of accounts are available?</b>
+        <p>Three kinds of accounts are offered by BorsaPro:</p>
+        <p><span>Mini Account</span> - beginning at $500 USD.</p>
+        <p><span>Classic Account</span> - beginning at $5000 USD.</p>
+        <p><span>Premium Account</span> - beginning at $20,000 USD.</p>
+      <b>Which platform should you use?</b>
+        <p>There are a variety of different platforms available from BorsaPro to meet the requirements of different traders with different circumstances.</p>
+        <p><span>BorsaPro MetaTrader 4</span> - Download this popular, world-renowned Forex desktop platform if you predominately trade in foreign currencies. It is both user-friendly and state-of-the-art.</p>
+        <p><span>BorsaPro Mobile</span> - this solution provides apps for Android, tablets, and iPhone, enabling traders to trade form anywhere in the world, from a variety of devices.</p>
+      <b>What type of information do you need to give in order to trade?</b>
+        <p>You are requested to give the following information for proof of identity upon registration:</p>
+        <p>A certified, original copy of your passport or ID.</p>
+        <p>A utility bill with proof of your mailing address.</p>
+        <p>You will need to clearly indicate the beneficiary name on the BorsaPro Customer Agreement. It is important that the account beneficiary name corresponds to the name on the customer agreement form, and also the documents for proof of identity. In addition, if you wish to withdraw funds, it must be to the same beneficiary.</p>
+      <b>How do you manage your risk?</b>
+        <p>The stop loss order and the limit order are the most common risk management tools in Forex trading. A limit order stets a restriction on the minimum price to be received or the maximum price to be paid. An automatic liquidation at a predetermined price for a particular position is called a stop loss. This is used to limit potential losses if the market moves against an investor’s position.</p>
     </div>
   </section>
   <section class="payment">
