--- a/borsa/tools/account-funding.html
+++ b/borsa/tools/account-funding.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Web Trader - BorsaPro</title>
+  <title>Account Funding - BorsaPro</title>
   <link rel="stylesheet" href="../css/style.min.css">
 </head>
 <body>
@@ -30,19 +30,19 @@
                 <li class="main-nav__item">
                   <a class="main-nav__title">Platforms</a>
                   <ul class="main-nav__list">
-                      <li class="main-nav__item"><a href="metatrader.html">BorsaPro Trade Meta Trader 4</a></li>
-                      <li class="main-nav__item"><a>BorsaPro Web Trader</a></li>
-                      <li class="main-nav__item"><a href="mobile.html">BorsaPro Trade Mobile</a></li>
+                      <li class="main-nav__item"><a href="../platforms/metatrader.html">BorsaPro Trade Meta Trader 4</a></li>
+                      <li class="main-nav__item"><a href="../platforms/web-trader.html">BorsaPro Web Trader</a></li>
+                      <li class="main-nav__item"><a href="../platforms/mobile.html">BorsaPro Trade Mobile</a></li>
                   </ul>
                 </li>
                 <li class="main-nav__item">
                   <a class="main-nav__title">Tools</a>
                   <ul class="main-nav__list">
                       <li class="main-nav__item"><a href="templates/spread.html">Spreads and Trading Hours</a></li>
-                      <li class="main-nav__item"><a href="../tools/trade-glossary.html">Trade glossary</a></li>
-                      <li class="main-nav__item"><a href="../tools/forex-signals.html">Forex Signals</a></li>
-                      <li class="main-nav__item"><a href="../tools/account-faq.html">Account FAQ</a></li>
-                      <li class="main-nav__item"><a href="../tools/account-funding.html">Account Funding & Withdrawal</a></li>
+                      <li class="main-nav__item"><a href="trade-glossary.html">Trade glossary</a></li>
+                      <li class="main-nav__item"><a href="forex-signals.html">Forex Signals</a></li>
+                      <li class="main-nav__item"><a href="account-faq.html">Account FAQ</a></li>
+                      <li class="main-nav__item"><a>Account Funding & Withdrawal</a></li>
                   </ul>
                 </li>
             </ul>
@@ -60,41 +60,45 @@
       </div>
     </div>
   </header>
-  <section class="title  title--platforms">
+  <section class="title  title--tools">
     <div class="container">
-      <h1>BorsaPro Web Trader</h1>
+      <h1>Account Funding</h1>
     </div>
   </section>
-  <section class="web">
+  <section class="funding">
     <div class="container">
-      <b>Begin trading immediately!</b>
-      <a href="https://webtrader.borsapro.com/" target="_blank">Go to Web Trader</a>
-      <p>BorsaPro`s highest purpose is to turn its users into successful traders and increase their success rates as much as possible. For that purpose we give you the BorsaPro Online trader, which enables you to be 100% involved in the trading process and adjust according to the market conditions, all the while letting you plan your trading activities to your preference.</p>
-      <p>Utilize the full scope of the latest technological developments in the field by trading from any internet connectible device. Investing in Forex, Commodities and CFD has never been easier thanks to the BorsaPro Online Trader.</p>
-      <b>It lets you:</b>
-      <ul>
-        <li>Have full control over your profile.</li>
-        <li>Perform in-depth market analysis.</li>
-        <li>Invest in a wide selection of orders.</li>
-      </ul>
-      <p>BorsaPro grants you a gateway to all your trading needs with the online and mobile trading applications. They are extremely intuitive and functional, enabling you to start a trade whenever you want, from anywhere with internet access. In case you already have a trading profile you can start a trade immediately.</p>
-      <p>The BorsaPro Online Trader present users with the option to choose from a number of languages, it features the latest charts, fast operation of the trades, and best of all, it makes everything easy. You have the ability to access to trader from a number of different devices such as Apple or Android phone, tablet or PC. The platform is easy to use on every device and you can handle your investments with just a few clicks.</p>
-      <p>Due to the intuitiveness and easiness of use, the BorsaPro Online trader will make sure that you are fully informed about all trades that interest you. Stay knowledgeable on the latest market news and trends, without having to leave your couch.</p>
-      <b>BorsaPro allows you to:</b>
-      <ul>
-        <li>Invest in a wide selection of instruments.</li>
-        <li>Perform the trades swiftly.</li>
-        <li>Get informed about the latest industry trends.</li>
-        <li>Get the actual market prices at the moment.</li>
-        <li>Make trades regardless of your location.</li>
-        <li>Make the platform look according to your desires.</li>
-        <li>Make the changes you want.</li>
-        <li>Make informed trading decisions based on technical stats.</li>
-        <li>Have access from any internet connectible device.</li>
-      </ul>
-      <p>The trading field can be very volatile and the conditions can change in a matter of minutes. Therefore, you need to be able to react quickly in such cases. With the BorsaPro Online Trader, you act accordingly and access your trades at any moment. The advantage is in your hands.</p>
-      <p>With the hastened pace of modern life, you need to be constantly on the go, but the platform lets you combine that with your trading needs, without having to compromise. It`s accessible from any browser, there is no need for you to be stuck to any specific place. Be it in your office, or from a friend`s PC, logging into your account and trading or just checking something is quick and simple.</p>
-      <p>Using BorsaPro to trade is like a walk in the park.</p>
+      <p>You can put money on your BorsaPro account in 3 different ways, according to your preferences. Log in to your BorsaPro account and go to the button for depositing. Notice that there are 3 available methods for doing so:</p>
+      <ol>
+        <li>
+          <b>Using a Credit Card</b>
+          <p>The quickest method available. It lets you put money on your profile momentarily. Making a deposit with a credit card is super easy as well, you just need to choose it as your desired method and then fill in the necessary information. Note that you need to have an international credit card in order for the payment to be accepted.</p>
+          <p>The smallest deposit amount is $250, whereas the deposit ceiling is $5,000. The withdrawal limitations are the same.</p>
+        </li>
+        <li>
+          <b>Bank Draft</b>
+          <p>Sometimes the transaction might take up to 5 days to get processed, so please have that in mind when using a bank draft.</p>
+        </li>
+        <li>
+          <b>Wire Transfer</b>
+          <p>In order to use a wire transfer to put money on your account, you need to fill in the necessary documents at the bank. Know that there is a minimum allowed amount of $10000 only, so you need to consider if this is the right deposit option for you.</p>
+          <p>It is possible that the process takes about 5 work days before the payment is completed. As soon as the money is on your profile, you will receive an e-mail notification.</p>
+        </li>
+      </ol>
+      <b>Withdrawing money from the account</b>
+        <p>Withdrawing money from your BorsaPro profile is very easy to do and takes no time at all. We are always 100% committed to doing what`s best for our users.</p>
+        <p>The money can also be withdrawn with a regular bank transferal. You can request the funds to be withdrawn in any method you find most comfortable. Note that it will be returned to the same account you made the deposit from.</p>
+      <b>In order to make a withdrawal you need to:</b>
+        <ul>
+          <li>Log in to your account in our <a href="https://client.borsapro.com/">client area</a> and submit a withdrawal request online.</li>
+          <li>We will take care of your withdrawal as soon as we get the request. After that we are going to send the money to the account which you made the deposit from. Varying on where your bank is situated, the transaction can take about 5 days to be fully processed and completed. Usually though, it takes less.</li>
+        </ul>
+      <b>Things you should take into account:</b>
+        <ul>
+          <li>BorsaPro takes care of transferring the deposit money.</li>
+          <li>The money you’ve earned from trading will be sent to the account that you`ve specified.</li>
+          <li>In some cases a back-charge might be imposed and deducted from the money that is being withdrawn.</li>
+        </ul>
+      <p>In case you would like to ask anything related to putting money on the Live Account, feel free to get in touch with a BorsaPro employee.</p>
     </div>
   </section>
   <section class="payment">
