--- a/borsa/tools/forex-signals.html
+++ b/borsa/tools/forex-signals.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Web Trader - BorsaPro</title>
+  <title>Forex Signals - BorsaPro</title>
   <link rel="stylesheet" href="../css/style.min.css">
 </head>
 <body>
@@ -30,19 +30,19 @@
                 <li class="main-nav__item">
                   <a class="main-nav__title">Platforms</a>
                   <ul class="main-nav__list">
-                      <li class="main-nav__item"><a href="metatrader.html">BorsaPro Trade Meta Trader 4</a></li>
-                      <li class="main-nav__item"><a>BorsaPro Web Trader</a></li>
-                      <li class="main-nav__item"><a href="mobile.html">BorsaPro Trade Mobile</a></li>
+                      <li class="main-nav__item"><a href="../platforms/metatrader.html">BorsaPro Trade Meta Trader 4</a></li>
+                      <li class="main-nav__item"><a href="../platforms/web-trader.html">BorsaPro Web Trader</a></li>
+                      <li class="main-nav__item"><a href="../platforms/mobile.html">BorsaPro Trade Mobile</a></li>
                   </ul>
                 </li>
                 <li class="main-nav__item">
                   <a class="main-nav__title">Tools</a>
                   <ul class="main-nav__list">
                       <li class="main-nav__item"><a href="templates/spread.html">Spreads and Trading Hours</a></li>
-                      <li class="main-nav__item"><a href="../tools/trade-glossary.html">Trade glossary</a></li>
-                      <li class="main-nav__item"><a href="../tools/forex-signals.html">Forex Signals</a></li>
-                      <li class="main-nav__item"><a href="../tools/account-faq.html">Account FAQ</a></li>
-                      <li class="main-nav__item"><a href="../tools/account-funding.html">Account Funding & Withdrawal</a></li>
+                      <li class="main-nav__item"><a href="trade-glossary.html">Trade glossary</a></li>
+                      <li class="main-nav__item"><a>Forex Signals</a></li>
+                      <li class="main-nav__item"><a href="account-faq.html">Account FAQ</a></li>
+                      <li class="main-nav__item"><a href="account-funding.html">Account Funding & Withdrawal</a></li>
                   </ul>
                 </li>
             </ul>
@@ -60,41 +60,15 @@
       </div>
     </div>
   </header>
-  <section class="title  title--platforms">
+  <section class="title  title--tools">
     <div class="container">
-      <h1>BorsaPro Web Trader</h1>
+      <h1>Forex Signals</h1>
     </div>
   </section>
-  <section class="web">
+  <section class="signal">
     <div class="container">
-      <b>Begin trading immediately!</b>
-      <a href="https://webtrader.borsapro.com/" target="_blank">Go to Web Trader</a>
-      <p>BorsaPro`s highest purpose is to turn its users into successful traders and increase their success rates as much as possible. For that purpose we give you the BorsaPro Online trader, which enables you to be 100% involved in the trading process and adjust according to the market conditions, all the while letting you plan your trading activities to your preference.</p>
-      <p>Utilize the full scope of the latest technological developments in the field by trading from any internet connectible device. Investing in Forex, Commodities and CFD has never been easier thanks to the BorsaPro Online Trader.</p>
-      <b>It lets you:</b>
-      <ul>
-        <li>Have full control over your profile.</li>
-        <li>Perform in-depth market analysis.</li>
-        <li>Invest in a wide selection of orders.</li>
-      </ul>
-      <p>BorsaPro grants you a gateway to all your trading needs with the online and mobile trading applications. They are extremely intuitive and functional, enabling you to start a trade whenever you want, from anywhere with internet access. In case you already have a trading profile you can start a trade immediately.</p>
-      <p>The BorsaPro Online Trader present users with the option to choose from a number of languages, it features the latest charts, fast operation of the trades, and best of all, it makes everything easy. You have the ability to access to trader from a number of different devices such as Apple or Android phone, tablet or PC. The platform is easy to use on every device and you can handle your investments with just a few clicks.</p>
-      <p>Due to the intuitiveness and easiness of use, the BorsaPro Online trader will make sure that you are fully informed about all trades that interest you. Stay knowledgeable on the latest market news and trends, without having to leave your couch.</p>
-      <b>BorsaPro allows you to:</b>
-      <ul>
-        <li>Invest in a wide selection of instruments.</li>
-        <li>Perform the trades swiftly.</li>
-        <li>Get informed about the latest industry trends.</li>
-        <li>Get the actual market prices at the moment.</li>
-        <li>Make trades regardless of your location.</li>
-        <li>Make the platform look according to your desires.</li>
-        <li>Make the changes you want.</li>
-        <li>Make informed trading decisions based on technical stats.</li>
-        <li>Have access from any internet connectible device.</li>
-      </ul>
-      <p>The trading field can be very volatile and the conditions can change in a matter of minutes. Therefore, you need to be able to react quickly in such cases. With the BorsaPro Online Trader, you act accordingly and access your trades at any moment. The advantage is in your hands.</p>
-      <p>With the hastened pace of modern life, you need to be constantly on the go, but the platform lets you combine that with your trading needs, without having to compromise. It`s accessible from any browser, there is no need for you to be stuck to any specific place. Be it in your office, or from a friend`s PC, logging into your account and trading or just checking something is quick and simple.</p>
-      <p>Using BorsaPro to trade is like a walk in the park.</p>
+      <p>At BorsaPro we provide the best forex signals by working closely with technology providers who are at the forefront of the industry.To get a different perspective on Commodities, Indices, Currency Pairs, and Stocks, you can change the Time Frame.</p>
+      <a href="http://www.mlc-forex-news.com/" target="_blank">HOT Signals</a>
     </div>
   </section>
   <section class="payment">
