--- a/borsa/platforms/metatrader.html
+++ b/borsa/platforms/metatrader.html
@@ -39,10 +39,10 @@
                   <a class="main-nav__title">Tools</a>
                   <ul class="main-nav__list">
                       <li class="main-nav__item"><a href="templates/spread.html">Spreads and Trading Hours</a></li>
-                      <li class="main-nav__item"><a href="templates/glossary.html">Trade glossary</a></li>
-                      <li class="main-nav__item"><a href="templates/signals.html">Forex Signals</a></li>
-                      <li class="main-nav__item"><a href="templates/account-faq.html">Account FAQ</a></li>
-                      <li class="main-nav__item"><a href="templates/account-funding.html">Account Funding & Withdrawal</a></li>
+                      <li class="main-nav__item"><a href="../tools/trade-glossary.html">Trade glossary</a></li>
+                      <li class="main-nav__item"><a href="../tools/forex-signals.html">Forex Signals</a></li>
+                      <li class="main-nav__item"><a href="../tools/account-faq.html">Account FAQ</a></li>
+                      <li class="main-nav__item"><a href="../tools/account-funding.html">Account Funding & Withdrawal</a></li>
                   </ul>
                 </li>
             </ul>
