--- a/borsa/index.html
+++ b/borsa/index.html
@@ -31,8 +31,8 @@
                 <li class="main-nav__item">
                   <a class="main-nav__title">Platforms</a>
                   <ul class="main-nav__list">
-                      <li class="main-nav__item"><a href="platforms/meta.html">BorsaPro Trade Meta Trader 4</a></li>
-                      <li class="main-nav__item"><a href="templates/web.html">BorsaPro Web Trader</a></li>
+                      <li class="main-nav__item"><a href="platforms/metatrader.html">BorsaPro Trade Meta Trader 4</a></li>
+                      <li class="main-nav__item"><a href="platforms/web-trader.html">BorsaPro Web Trader</a></li>
                       <li class="main-nav__item"><a href="platforms/mobile.html">BorsaPro Trade Mobile</a></li>
                   </ul>
                 </li>
@@ -40,10 +40,10 @@
                   <a class="main-nav__title">Tools</a>
                   <ul class="main-nav__list">
                       <li class="main-nav__item"><a href="templates/spread.html">Spreads and Trading Hours</a></li>
-                      <li class="main-nav__item"><a href="templates/glossary.html">Trade glossary</a></li>
-                      <li class="main-nav__item"><a href="templates/signals.html">Forex Signals</a></li>
-                      <li class="main-nav__item"><a href="templates/account-faq.html">Account FAQ</a></li>
-                      <li class="main-nav__item"><a href="templates/account-funding.html">Account Funding & Withdrawal</a></li>
+                      <li class="main-nav__item"><a href="tools/trade-glossary.html">Trade glossary</a></li>
+                      <li class="main-nav__item"><a href="tools/forex-signals.html">Forex Signals</a></li>
+                      <li class="main-nav__item"><a href="tools/account-faq.html">Account FAQ</a></li>
+                      <li class="main-nav__item"><a href="tools/account-funding.html">Account Funding & Withdrawal</a></li>
                   </ul>
                 </li>
             </ul>
